--- a/src/application/site_layout.fxml
+++ b/src/application/site_layout.fxml
@@ -31,6 +31,7 @@
       <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
   </rowConstraints>
    <children>
+      <Pane fx:id="pane" prefHeight="42.0" prefWidth="441.0" GridPane.columnSpan="10" GridPane.rowIndex="5" />
       <HBox prefHeight="42.0" prefWidth="93.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="5">
          <children>
             <Button fx:id="refBtn" alignment="CENTER" mnemonicParsing="false" onAction="#refreshSite" text="Refresh" textAlignment="JUSTIFY">
@@ -48,14 +49,14 @@
                </HBox.margin></Button>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: rgba(100, 255, 149, 0.9);" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.rowIndex="5">
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.rowIndex="5">
          <children>
-            <Label prefHeight="19.0" prefWidth="110.0" text="Member Num :" textFill="#0d0d0d">
+            <Label fx:id="memLab" prefHeight="19.0" prefWidth="109.0" text="Member Num:" wrapText="true">
                <HBox.margin>
-                  <Insets left="10.0" top="10.0" />
+                  <Insets left="5.0" top="10.0" />
                </HBox.margin>
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
             </Label>
             <TextField fx:id="numInput" prefHeight="23.0" prefWidth="58.0">
@@ -66,7 +67,7 @@
                   <Insets top="10.0" />
                </HBox.margin>
             </TextField>
-            <Button fx:id="submit" mnemonicParsing="false" text="Button">
+            <Button fx:id="submit" mnemonicParsing="false" prefHeight="23.0" prefWidth="62.0" text="Submit">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
