--- a/src/application/site_layout.fxml
+++ b/src/application/site_layout.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="grid" prefHeight="257.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<GridPane fx:id="grid" prefHeight="280.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,34 +26,37 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
       <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
       <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
       <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
   </rowConstraints>
    <children>
-      <Pane fx:id="pane" prefHeight="42.0" prefWidth="441.0" GridPane.columnSpan="10" GridPane.rowIndex="5" />
-      <HBox prefHeight="42.0" prefWidth="93.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="5">
+      <HBox GridPane.columnIndex="6" GridPane.columnSpan="4" GridPane.rowIndex="7">
          <children>
-            <Button fx:id="refBtn" alignment="CENTER" mnemonicParsing="false" onAction="#refreshSite" text="Refresh" textAlignment="JUSTIFY">
+            <Button fx:id="refBtn" alignment="CENTER" mnemonicParsing="false" onAction="#refreshSite" prefHeight="23.0" prefWidth="61.0" text="Refresh" textAlignment="JUSTIFY">
                <HBox.margin>
-                  <Insets left="50.0" top="10.0" />
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="CnlBtn" cancelButton="true" mnemonicParsing="false" onAction="#stop" prefHeight="23.0" prefWidth="64.0" text="Cancel" textAlignment="JUSTIFY">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="clrBtn" mnemonicParsing="false" text="Test">
+               <HBox.margin>
+                  <Insets top="5.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <HBox prefHeight="42.0" prefWidth="93.0" GridPane.columnIndex="8" GridPane.columnSpan="2" GridPane.rowIndex="5">
-         <children>
-            <Button fx:id="CnlBtn" cancelButton="true" mnemonicParsing="false" onAction="#stop" text="Cancel" textAlignment="JUSTIFY">
-               <HBox.margin>
-                  <Insets left="25.0" top="10.0" />
-               </HBox.margin></Button>
-         </children>
-      </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.rowIndex="5">
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="7">
          <children>
             <Label fx:id="memLab" prefHeight="19.0" prefWidth="109.0" text="Member Num:" wrapText="true">
                <HBox.margin>
-                  <Insets left="5.0" top="10.0" />
+                  <Insets left="5.0" top="5.0" />
                </HBox.margin>
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -64,7 +67,7 @@
                   <Insets />
                </opaqueInsets>
                <HBox.margin>
-                  <Insets top="10.0" />
+                  <Insets top="5.0" />
                </HBox.margin>
             </TextField>
             <Button fx:id="submit" mnemonicParsing="false" prefHeight="23.0" prefWidth="62.0" text="Submit">
@@ -72,7 +75,7 @@
                   <Insets />
                </opaqueInsets>
                <HBox.margin>
-                  <Insets left="5.0" top="10.0" />
+                  <Insets left="5.0" top="5.0" />
                </HBox.margin>
             </Button>
          </children>
