--- a/src/application/application.css
+++ b/src/application/application.css
@@ -1,7 +1,3 @@
-#pane {
-	-fx-background-color: linear-gradient(#98a8bd 0%, #8195af 25%, #6d86a4 100%);
-}
-
 .button {
     -fx-background-color: 
         #000000,
@@ -14,8 +10,28 @@
     -fx-text-fill: white;
     -fx-font-size: 12px;
 }
+.button:hover {
+    -fx-background-color: 
+        #6e6eff,
+        linear-gradient(#7ebcff, #2f4baf),
+        linear-gradient(#426aff, #263e95),
+        linear-gradient(#395cff, #223788);
+    -fx-text-fill: rgba(255,255,255,0.8);
+}
+.button:pressed {
+    -fx-background-color: 
+        #ffffff,
+        linear-gradient(#7ebcea, #2f4b8f),
+        linear-gradient(#426ab7, #263e75),
+        linear-gradient(#395cab, #223768);
+    -fx-text-fill: rgba(150,150,150,0.8);
+}
 
 #memLab {
 	-fx-font-effect: dropshadow( one-pass-box , rgba(0,0,0,0.8) , 0, 0.0 , 0 , 1);
 	-fx-font-size: 15px;
+}
+
+#grid {
+    -fx-background-color: rgba(220, 220, 220, 0.9);
 }
